--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-
-
+google-cloud-storage
+google-auth
+google
